# tatutanatata

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bors.toml  build.rs
.github/workflows/: ci.yml  release.yml
src/: blob.rs  client.rs  compression.rs  constants.rs  eml.rs  error.rs  file_output.rs  folders.rs  logging.rs  login.rs  mails.rs  main.rs  non_empty_string.rs  proto.rs  retry.rs  session.rs  signal.rs  storage.rs  thirtyfour_util.rs  webdriver.rs
src/commands/: export.rs  list_folders.rs  mod.rs
src/crypto/: auth.rs  encryption.rs  mod.rs
src/proto/: binary.rs  constants.rs  date.rs  enums.rs  keys.rs  messages.rs  mod.rs  numbers.rs  testing.rs
tests/: cli.rs
tests/reference/: 2023-11-07-14h57m21s-Tutanota is now Tuta  su fr deutsche Version.eml  2023-12-22-09h49m57s-Privacy for Everyone  su fr deutsche Version.eml  2024-02-14-17h34m30s-Test Mail 1.eml  2024-02-14-17h38m34s-Test Mail 2.eml  2024-02-18-16h54m17s-Test.eml  2024-04-03-18h09m35s-Hello All.eml  2024-09-22-19h54m31s-test.eml
