[package]
name = "tatutanatata"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.89"
argon2 = "0.5.3"
base64 = "0.22.1"
bcrypt = "0.15.1"
cbc = { version = "0.1.2", features = ["alloc"] }
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.31"
hmac = "0.12.1"
itertools = "0.13.0"
lz4_flex = "0.11.3"
regex = "1.11.0"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "charset", "deflate", "gzip", "hickory-dns", "http2", "json", "rustls-tls-webpki-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1.16"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tokio-retry = "0.3.0"
tracing = "0.1.38"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0.16"
hex-literal = "0.4.1"
insta = "1.40.0"
similar-asserts = "1.6.0"
tempfile = "3"

[lints.rust]
rust_2018_idioms = { level ="deny", priority = -1 }
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
unreachable_pub = "deny"
unused_crate_dependencies = "deny"

[lints.clippy]
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
explicit_iter_loop = "deny"
future_not_send = "deny"
todo = "deny"
use_self = "deny"

[lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
